Edit for relative image paths on homepage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>
             <div class="card">
               <figure>
-                <img src="/assets/img/web-dev.jpg " alt="Web Developement course picture" >
+                <img src="assets/img/web-dev.jpg" alt="Web Developement course picture" >
               </figure>
               <div class="card-content">
                 <h3 class="card-title">Introduction to Web Development</h3>
@@ -46,7 +46,7 @@
           <li>
             <div class="card">
               <figure>
-                <img src="/assets/img/mobile-dev.jpg" alt="Mobile Developement course picture">
+                <img src="assets/img/mobile-dev.jpg" alt="Mobile Developement course picture">
               </figure>
               <div class="card-content">
                 <h3 class="card-title">Mobile Development</h3>
@@ -57,7 +57,7 @@
           <li>
             <div class="card">
               <figure>
-                <img src="/assets/img/ipro.jpg" alt="Ipro course picture">
+                <img src="assets/img/ipro.jpg" alt="Ipro course picture">
               </figure>
               <div class="card-content">
                 <h3 class="card-title">Interprofessional Design and Tech Entrepreneurship</h3>
@@ -68,7 +68,7 @@
           <li>
             <div class="card">
               <figure>
-                <img src="/assets/img/linear-alg.jpg" alt="Linear Algebra course picture">
+                <img src="assets/img/linear-alg.jpg" alt="Linear Algebra course picture">
               </figure>
               <div class="card-content">
                 <h3 class="card-title">Linear Algebra</h3>
@@ -79,7 +79,7 @@
           <li>
             <div class="card">
               <figure>
-                <img src="/assets/img/victorian-england.jpg" alt="Victorian England course picture">
+                <img src="assets/img/victorian-england.jpg" alt="Victorian England course picture">
               </figure>
               <div class="card-content">
                 <h3 class="card-title">History of Victorian England</h3>
