Edit to relative images for history page

--- a/history/index.html
+++ b/history/index.html
@@ -26,21 +26,21 @@
     <article id="adapictures">
       <h2>These are some well known paintings and drawings of Ada Lovelace</h2>
       <figure>
-        <img src="/assets/img/ada-drawing.jpg" alt="Black and white drawing of Ada Lovelace" />
+        <img src="../assets/img/ada-drawing.jpg" alt="Black and white drawing of Ada Lovelace" />
         <figcaption>
           Ada Lovelace black and white drawing.
         </figcaption>
       </figure>
 
       <figure>
-        <img src="/assets/img/ada-color.jpg" alt="Colorful painting of Ada Lovelace" />
+        <img src="../assets/img/ada-color.jpg" alt="Colorful painting of Ada Lovelace" />
         <figcaption>
           Ada Lovelace dressed up in beautiful purple dress.
         </figcaption>
       </figure>
 
       <figure>
-        <img src="/assets/img/Ada-whitedress.jpg" alt="Painting of Ada Lovelace in a white dress" />
+        <img src="../assets/img/Ada-whitedress.jpg" alt="Painting of Ada Lovelace in a white dress" />
         <figcaption>
           Painting of Ada Lovelace in a white dress
         </figcaption>
@@ -95,7 +95,7 @@
             </li>
             <li>
               <figure>
-                <img src="/assets/img/ada-gif.gif" alt="Funny gif for Ada Lovelace Day" />
+                <img src="../assets/img/ada-gif.gif" alt="Funny gif for Ada Lovelace Day" />
                 <figcaption>
                   Gif of Ada Lovelace
                 </figcaption>
@@ -118,7 +118,7 @@
     <article class="byron">
       <h2>Lord Byron</h2>
       <figure>
-        <img src="/assets/img/ada-and-father.jpg" alt="Two paintings with Ada and her Father" />
+        <img src="../assets/img/ada-and-father.jpg" alt="Two paintings with Ada and her Father" />
         <figcaption>
           Paintings of Ada and her father, Lord Byron.
         </figcaption>
@@ -129,7 +129,7 @@
         He was well known for his sexual escapades and his beautiful and brilliany peotry writings. Here is an example of a very famous one:
       </p>
       <figure>
-        <img src="/assets/img/byron-poem.jpg" alt="Famous poem by Lord Byron" />
+        <img src="../assets/img/byron-poem.jpg" alt="Famous poem by Lord Byron" />
         <figcaption>
           Lord Byron's famous poem about loving men.
         </figcaption>
