--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="assets/img/ipro.jpg" alt="Ipro course picture">
               </figure>
               <div class="card-content">
-                <h3 class="card-title">Interprofessional Design and Tech Entrepreneurship</h3>
+                <h3 class="card-title">IPRO Design and Tech Entrepreneurship</h3>
                 <p>Working in a team of multiple majors in order to design and prototype solutions for moral distress in nurses.</p>
               </div>
             </div>
