Add decent grid for history page

--- a/history/index.html
+++ b/history/index.html
@@ -12,51 +12,28 @@
       <a href="#footer" class="to-nav">Menu</a>
     </header>
 
-    <!--Want a "card" style website so each article would be its own card with information about Ada or het father-->
-    <main id="history">  
-      <article id="about" class="grid">
+    <main class="historycards">  
+      <article id="about" class="card">
         <ul>
           <li>
             <figure>
-              <img src="../assets/img/ada-photo.jpg" alt="Photo of Ada Lovelace" >
+              <img src="../assets/img/ada-photo.jpg" alt="Photograph of Ada Lovelace" />
             </figure>
-            <div class="card-content">
-              <h2 class="card-title">Who is Ada Lovelace?</h2>
-              <p>
-                Ada Lovelace was born on December 10 1815 in London, was a Victorian-era mathematician who is well known
-                for her work with <a href="https://www.britannica.com/biography/Charles-Babbage">Charles Babbage </a> on the <a href="https://www.britannica.com/technology/Analytical-Engine">Analytic Engine</a> and is widely celebrated as the first computer
-                programmer.
-              </p>
-            </div>
+            <h2>Who is Ada Lovelace?</h2>
+            <p>
+              Ada Lovelace was born on December 10 1815 in London, was a Victorian-era mathematician who is well known
+              for her work with <a href="https://www.britannica.com/biography/Charles-Babbage">Charles Babbage </a> on the <a href="https://www.britannica.com/technology/Analytical-Engine">Analytic Engine</a> and is widely celebrated as the first computer
+              programmer.
+            </p>
           </li>
         </ul>
       </article>
-      <article id="adapictures" class="grid">
+
+      <article id="adapictures" class="card">
         <ul>
           <li>
             <figure>
               <img src="../assets/img/ada-drawing.jpg" alt="Black and white drawing of Ada Lovelace" />
-              <figcaption>
-                Ada Lovelace black and white drawing.
-              </figcaption>
-            </figure>
-            <div class="card-content">
-              <h2 class="card-title">Well known paintings of Ada Lovelace</h2>
-              <p>
-                PUT TEXT HERE
-              </p>
-            </div>
-          </li>
-        </ul>
-      </article>
-      <article id="adapictures" class="grid">
-        <ul>
-          <li>
-            <figure>
-              <img src="../assets/img/ada-whitedress.jpg" alt="Painting of Ada Lovelace in a white dress" />
-              <figcaption>
-                Painting of Ada Lovelace in a white dress
-              </figcaption>
             </figure>
             <div class="card-content">
               <h2 class="card-title">Well known paintings of Ada Lovelace</h2>
@@ -68,7 +45,7 @@
         </ul>
       </article>
 
-      <article id="computing" class="grid">
+      <article id="computing" class="card">
         <h2>Women in CS</h2>
         <p>
           Ada Lovelace was the first programmer EVER and she was a WOMAN.
@@ -177,35 +154,7 @@
           in the timeline!
         </p>
       </article>
-
-      <article id="citations" class="card">
-        <h2>Bibliography</h2>
-        <ol>
-          <li>
-            Aiello, Luigia Carlucci. <cite>“The Multifaceted Impact of Ada Lovelace in the Digital Age.”</cite> Artificial Intelligence,
-            Elsevier, 2 Mar. 2016, https://www.sciencedirect.com/science/article/pii/S0004370216300224.
-          </li>
-          <li>
-            <cite>“Analytical Engine.”</cite> Encyclopædia Britannica, Encyclopædia Britannica, Inc.,
-            https://www.britannica.com/technology/Analytical-Engine.
-          </li>
-          <li>
-            <cite>“Byron and Don Juan: A Case Study and Queer ... - UTC Scholar.”</cite> Byron and Don Juan,
-            https://scholar.utc.edu/cgi/viewcontent.cgi?article=1273&amp;context=honors-theses.
-          </li>
-          <li>
-            <cite>“Lord Byron.”</cite> Biography.com, A&amp;E Networks Television, 22 June 2020, https://www.biography.com/writer/lord-byron.
-          </li>
-          <li>
-            Morais, Betsy. <cite>“Ada Lovelace, the First Tech Visionary.”</cite> The New Yorker, 15 Oct. 2013,
-            https://www.newyorker.com/tech/annals-of-technology/ada-lovelace-the-first-tech-visionary.
-          </li>
-          <li>
-            Wolfram, Stephen. <cite>“Untangling the Tale of Ada Lovelace.”</cite> Wired, Conde Nast, 22 Dec. 2015,
-            https://www.wired.com/2015/12/untangling-the-tale-of-ada-lovelace/.
-          </li>
-        </ol>
-      </article>
+      
     </main>
 
     <footer id="footer">
