--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Home: Lynn Matar</title>
-    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" charset="UTF-8"/>
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="assets/css/screen.css" />
   </head>
