--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Resume: Lynn Matar</title>
-    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" charset="UTF-8"/>
     <link rel="stylesheet" href="../assets/css/screen.css" />
   </head>
 
