--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main id="content">
       <article id="aboutme">
-        <h1>About</h1>
+        <h1>Who Am I?</h1>
         <p>
           I am from Lebanon and I'm a third year computer science major at Illinois Institute of
           Technology in Chicago. Currently, I am interested in back-end and front-end programming.
@@ -30,7 +30,6 @@
 
       <article id="schedule" class="grid">
         <h1>Class Schedule Fall 2021</h1>
-
         <ul>
           <li>
             <figure>
