--- a/resume/index.html
+++ b/resume/index.html
@@ -11,10 +11,10 @@
       <h1>Lynn Matar</h1>
       <a href="#footer" class="to-nav">Menu</a>
     </header>
-    <main id="content">
-      
-      <h2 class="contact-info">Contact</h2>
-      <ul class="contact">
+    <main id="resume">
+
+      <ul id="contact">
+        <h2>Contact</h2>
         <li>
           <a class="u-email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
         </li>
@@ -25,18 +25,18 @@
           <a class="u-url github" href="github.com/lynnmatar">Github Page</a>
         </li>
       </ul>
-    
-      <section class="education">
+
+      <section id="education">
         <h2>Education</h2>
-        <ul class="degree">
+        <ul>
           <li>
-            <h3>Master of Science (M.S.) in Computer Science</h3>
-            <ul>
+            <h3>Bachelors of Science (B.S.) in Computer Science</h3>
+            <ul id="iit">
               <li>
                 Illinois Institute of Technology, Chicago, IL
               </li>
               <li>
-                Expected Graduation: Dec 2023
+                Expected Graduation: Dec 2022
               </li>
               <li>
                 GPA: 4.0/4.0
@@ -46,9 +46,9 @@
         </ul>
       </section>
 
-      <section class="experience">
+      <section id="experience">
         <h2>Experience</h2>
-        <ul class="work">
+        <ul>
           <!--Technology Analyst @ Accenture-->
           <li>
             <h3 class="worktitle">Technology Summer Anaylyst</h3>
@@ -56,7 +56,6 @@
               <li class="workdescription">Accenture, Minneapolis, MN</li>
               <li class="workdate">Jun 2021 - Aug 2021</li>
               <li class="workdetail">
-                <h4>Responsibilities</h4>
                 <ul>
                   <li>
                     Expanded knowledge of AWS architecture and devops
@@ -81,7 +80,6 @@
               <li class="workdescription">HaxML: Virtual Soccer Analytics Platform, Chicago, IL</li>
               <li class="workdate">Jan 2021 - Feb 2021</li>
               <li class="workdetail">
-                <h4>Responsibilities</h4>
                 <ul>
                   <li>
                     Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+
@@ -104,7 +102,6 @@
               <li class="workdescription">Script Health, Chicago, IL</li>
               <li class="workdate">Oct 2020 - Jan 2021</li>
               <li class="workdetail">
-                <h4>Responsibilities</h4>
                 <ul>
                   <li>
                     Contributed to end-to-end product lifecycle for startup company application
@@ -123,10 +120,9 @@
           <li>
             <h3 class="worktitle">Computer Science Instructor</h3>
             <ul>
-              <li class="workdescription">Juni Learning, RemoteL</li>
+              <li class="workdescription">Juni Learning, Remote</li>
               <li class="workdate">Oct 2020 - Jun 2021</li>
               <li class="workdetail">
-                <h4>Responsibilities</h4>
                 <ul>
                   <li>
                     Teaching courses in Python, Java, and Scratch
@@ -144,9 +140,9 @@
         </ul>
       </section>
 
-      <section class="courses">
+      <section id="courses">
         <h2>Relevant Courses</h2>
-        <ul class="courseslist">
+        <ul>
           <li>
             Object-Oriented Programming
           </li>
@@ -186,9 +182,9 @@
         </ul>
       </section>
 
-      <section class="skills">
+      <section id="skills">
         <h2>Technical Skills</h2>
-        <ul class="skillslist">
+        <ul>
           <li>
             Python
           </li>
@@ -210,9 +206,9 @@
         </ul>
       </section>
 
-      <section class="leadership">
+      <section id="leadership">
         <h2>Leadership and Activities</h2>
-        <ul class="leadershiplist">
+        <ul>
           <li>
             Co-founder and Software Developer of Square1
           </li>
@@ -231,9 +227,9 @@
         </ul>
       </section>
 
-      <section class="awards">
+      <section id="awards">
         <h2>Awards</h2>
-        <ul class="awardslist">
+        <ul>
           <li>
             Best Public Transit Hack @ Deamonshanck
           </li>
