Clean up CSS and edit home page content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </p>
         <p>
           Although school takes up a lot of my time, I have many interests and hobbies such as
-          longboarding, weight training, playing the guitar, coffee, exploring new places, trying new foods,
+          longboarding, weight training, listening to music, playing the guitar, coffee, exploring new places, trying new foods,
           and meeting new people!
         </p>
       </article>
@@ -54,7 +54,7 @@
               <img src="assets/img/ipro.jpg" alt="Ipro course picture">
             </figure>
             <div class="card-content">
-              <h3 class="card-title">IPRO Design and Tech Entrepreneurship</h3>
+              <h3 class="card-title">IPRO Design and Tech Innovation</h3>
               <p>Working in a team of multiple majors in order to design and prototype solutions for moral distress in nurses.</p>
             </div>
           </li>
