Edit all html files to fix htmllinter errors and clean up css file

--- a/resume/index.html
+++ b/resume/index.html
@@ -248,22 +248,18 @@
 
     <footer id="footer">
       <section class="ft-main">
-        <div class="ft-item">
+        <ul class="ft-item">
           <h2 class="ft-title">Menu</h2>
-          <ul>
-            <li><a href="../">Home</a></li>
-            <li><a href="../resume/">Resume</a></li>
-            <li><a href="../history/">History Project</a></li>
-          </ul>
-        </div>
-        <div class="ft-item">
+          <li><a href="../">Home</a></li>
+          <li><a href="../resume/">Resume</a></li>
+          <li><a href="../history/">History Project</a></li>
+        </ul>
+        <ul class="ft-item">
           <h2 class="ft-title">Contact</h2>
-          <ul>
-            <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
-            <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
-            <li><a class="github" href="github.com/lynnmatar">Github</a></li>
-          </ul>
-        </div>
+          <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
+          <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
+          <li><a class="github" href="github.com/lynnmatar">Github</a></li>
+        </ul>
       </section>
       <section class="credits">
         <ul class="credits-list">
