--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Home: Lynn Matar</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" charset="UTF-8"/>
-    <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="assets/css/screen.css" />
   </head>
 
@@ -31,50 +30,50 @@
       <article id="schedule" class="grid">
         <h1>Class Schedule Fall 2021</h1>
         <ul>
-          <li>
+          <li class="card-content">
             <figure>
-              <img src="assets/img/web-dev.jpg" alt="Web Developement course picture" >
+              <img src="assets/img/web-dev.jpg" alt="Web Developement course picture" />
+              <figcaption>
+                <h3>Introduction to Web Development</h3>
+              </figcaption>
             </figure>
-            <div class="card-content">
-              <h3 class="card-title">Introduction to Web Development</h3>
-              <p>Learning HTML, CSS, and JS in order to create mobile-first responsive websites.</p>
-            </div>
+            <p>Learning HTML, CSS, and JS in order to create mobile-first responsive websites.</p>
           </li>
-          <li>
+          <li class="card-content">
             <figure>
-              <img src="assets/img/mobile-dev.jpg" alt="Mobile Developement course picture">
+              <img src="assets/img/mobile-dev.jpg" alt="Mobile Developement course picture"/>
+              <figcaption>
+                <h3>Mobile Development</h3>
+              </figcaption>
             </figure>
-            <div class="card-content">
-              <h3 class="card-title">Mobile Development</h3>
-              <p>Using Java in Andriod Studio in order to make applications such as a weather app.</p>
-            </div>
+            <p>Using Java in Andriod Studio in order to make applications such as a weather app.</p>
           </li>
-          <li>
+          <li class="card-content">
             <figure>
-              <img src="assets/img/ipro.jpg" alt="Ipro course picture">
+              <img src="assets/img/ipro.jpg" alt="Ipro course picture"/>
+              <figcaption>
+                <h3>IPRO Design and Tech Innovation</h3>
+              </figcaption>
             </figure>
-            <div class="card-content">
-              <h3 class="card-title">IPRO Design and Tech Innovation</h3>
-              <p>Working in a team of multiple majors in order to design and prototype solutions for moral distress in nurses.</p>
-            </div>
+            <p>Working in a team of multiple majors in order to design and prototype solutions for moral distress in nurses.</p>
           </li>
-          <li>
+          <li class="card-content">
             <figure>
-              <img src="assets/img/linear-alg.jpg" alt="Linear Algebra course picture">
+              <img src="assets/img/linear-alg.jpg" alt="Linear Algebra course picture"/>
+              <figcaption>
+                <h3>Linear Algebra</h3>
+              </figcaption>
             </figure>
-            <div class="card-content">
-              <h3 class="card-title">Linear Algebra</h3>
-              <p>Understanding systems of linear equations, matrix algebra, vector spaces, etc.</p>
-            </div>
+            <p>Understanding systems of linear equations, matrix algebra, vector spaces, etc.</p>
           </li>
-          <li>
+          <li class="card-content">
             <figure>
-              <img src="assets/img/victorian-england.jpg" alt="Victorian England course picture">
+              <img src="assets/img/victorian-england.jpg" alt="Victorian England course picture"/>
+              <figcaption>
+                <h3>History of Victorian England</h3>
+              </figcaption>
             </figure>
-            <div class="card-content">
-              <h3 class="card-title">History of Victorian England</h3>
-              <p>Investigating the social, cultural, and political changes between 1800-1900's in England.</p>
-            </div>
+            <p>Investigating the social, cultural, and political changes between 1800-1900's in England.</p>
           </li>
         </ul>
       </article>
@@ -82,22 +81,18 @@
 
     <footer id="footer">
       <section class="ft-main">
-        <div class="ft-item">
+        <ul class="ft-item">
           <h2 class="ft-title">Menu</h2>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="resume/">Resume</a></li>
-            <li><a href="history/">History Project</a></li>
-          </ul>
-        </div>
-        <div class="ft-item">
+          <li><a href="../">Home</a></li>
+          <li><a href="../resume/">Resume</a></li>
+          <li><a href="../history/">History Project</a></li>
+        </ul>
+        <ul class="ft-item">
           <h2 class="ft-title">Contact</h2>
-          <ul>
-            <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
-            <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
-            <li><a class="github" href="github.com/lynnmatar">Github</a></li>
-          </ul>
-        </div>
+          <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
+          <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
+          <li><a class="github" href="github.com/lynnmatar">Github</a></li>
+        </ul>
       </section>
       <section class="credits">
         <ul class="credits-list">
