Fix all css errors from style linter

--- a/history/index.html
+++ b/history/index.html
@@ -332,7 +332,7 @@
         </ol>
       </article>
 
-      <article id="faq1" class="card">
+      <article id="holiday" class="card">
         <figure>
           <img src="../assets/img/ada-day.jpg" alt="Ada Lovelace Day Cartoon Drawing" />
           <figcaption>
@@ -345,7 +345,7 @@
         </p>
       </article>
 
-      <article id="faq2" class="card">
+      <article id="lgbtq" class="card">
         <figure>
           <img src="../assets/img/ada-qoute.jpg" alt="Famous Qoute from Ada Lovelace" />
           <figcaption>
