Fix all errors from html and css validators

--- a/history/index.html
+++ b/history/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title> Ada Lovelace History</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" charset="UTF-8"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel="stylesheet" href="../assets/css/screen.css" />
   </head>
 
@@ -472,13 +473,13 @@
     <footer id="footer">
       <section class="ft-main">
         <ul class="ft-item">
-          <h2 class="ft-title">Menu</h2>
+          <li><h2 class="ft-title">Menu</h2></li>
           <li><a href="../">Home</a></li>
           <li><a href="../resume/">Resume</a></li>
           <li><a href="../history/">History Project</a></li>
         </ul>
         <ul class="ft-item">
-          <h2 class="ft-title">Contact</h2>
+          <li><h2 class="ft-title">Contact</h2></li>
           <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
           <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
           <li><a class="github" href="github.com/lynnmatar">Github</a></li>
@@ -486,7 +487,7 @@
       </section>
       <section class="credits">
         <ul class="credits-list">
-          <li>Site was created &copy; by Lynn Matar.</li>
+          <li><h2>Site was created &copy; by Lynn Matar.</h2></li>
           <li><a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a></li>
         </ul>
       </section>
