--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>Home: Lynn Matar</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" charset="UTF-8"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel="stylesheet" href="assets/css/screen.css" />
   </head>
 
@@ -13,7 +14,7 @@
     </header>
     <main id="content">
       <article id="aboutme">
-        <h1>Who Am I?</h1>
+        <h2>Who Am I?</h2>
         <p>
           I am from Lebanon and I'm a third year computer science major at Illinois Institute of
           Technology in Chicago. Currently, I am interested in back-end and front-end programming.
@@ -28,7 +29,7 @@
       </article>
 
       <article id="schedule" class="grid">
-        <h1>Class Schedule Fall 2021</h1>
+        <h2>Class Schedule Fall 2021</h2>
         <ul>
           <li class="card-content">
             <figure>
@@ -82,13 +83,13 @@
     <footer id="footer">
       <section class="ft-main">
         <ul class="ft-item">
-          <h2 class="ft-title">Menu</h2>
+          <li><h2 class="ft-title">Menu</h2></li>
           <li><a href="../">Home</a></li>
           <li><a href="../resume/">Resume</a></li>
           <li><a href="../history/">History Project</a></li>
         </ul>
         <ul class="ft-item">
-          <h2 class="ft-title">Contact</h2>
+          <li><h2 class="ft-title">Contact</h2></li>
           <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
           <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
           <li><a class="github" href="github.com/lynnmatar">Github</a></li>
@@ -96,7 +97,7 @@
       </section>
       <section class="credits">
         <ul class="credits-list">
-          <li>Site was created &copy; by Lynn Matar.</li>
+          <li><h2>Site was created &copy; by Lynn Matar.</h2></li>
           <li><a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a></li>
         </ul>
       </section>
