Fix menu relative links that got broken

--- a/history/index.html
+++ b/history/index.html
@@ -474,9 +474,9 @@
       <section class="ft-main">
         <ul class="ft-item">
           <li><h2 class="ft-title">Menu</h2></li>
-          <li><a href="../">Home</a></li>
-          <li><a href="../resume/">Resume</a></li>
-          <li><a href="../history/">History Project</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/resume/">Resume</a></li>
+          <li><a href="/history/">History Project</a></li>
         </ul>
         <ul class="ft-item">
           <li><h2 class="ft-title">Contact</h2></li>
