Change font family for site

--- a/history/index.html
+++ b/history/index.html
@@ -251,7 +251,7 @@
 
       <article id="demorgan" class="card">
         <figure>
-          <img src="../assets/img/Demorgan.jpg" alt="Picture of Augustus De Morgan, the mathematician" />
+          <img src="../assets/img/demorgan.jpg" alt="Picture of Augustus De Morgan, the mathematician" />
           <figcaption>
             <h2>Augustus De Morgan</h2>
           </figcaption>
